# ac-decomp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.py  generate_cmake.py  list_sources.py  vcpkg.json
.github/workflows/: build.yml
cmake/: ac_libs.cmake  boot.cmake
cmake/libs/: Famicom.cmake  J2DGraph.cmake  JFramework.cmake  JGadget.cmake  JKernel.cmake  JSupport.cmake  JUtility.cmake  MSL_C.PPCEABI.bare.H.cmake  OdemuExi2.cmake  Runtime.PPCEABI.H.cmake  TRK_MINNOW_DOLPHIN.cmake  actor.cmake  actor_npc.cmake  actor_npc_event.cmake  actor_tool.cmake  ai.cmake  amcstubs.cmake  ar.cmake  base.cmake  bg_item.cmake  boot.cmake  card.cmake  dataobject.cmake  db.cmake  dsp.cmake  dvd.cmake  effect.cmake  exi.cmake  foresta.cmake  game.cmake  gba.cmake  gx.cmake  jaudio_NES_game.cmake  jaudio_NES_internal.cmake  libc64.cmake  libforest.cmake  libjsys.cmake  libu64.cmake  libultra.cmake  mtx.cmake  (+6 more)
config/GAFE01_00/: config.yml  ldscript.tpl  splits.txt
config/GAFU01_00/: build.sha1  config.yml  splits.txt  symbols.txt
include/: _mem.h  ac_halloween_npc.h  ac_museum_fish_priv.h  ac_museum_insect_priv.h  ac_npc.h  ac_npc_needlework.h  ac_npc_shasho.h  ac_snowman.h  ac_tokyoso_control.h  ac_tokyoso_npc1.h  ac_tukimi_npc1.h  ac_tunahiki_control.h  audio.h  audio_defs.h  boot.h  cmath.h  graph.h  jsyswrap.h  m_card.h  m_clip.h  m_collision_bg.h  m_common_data.h  m_design_ovl.h  m_event.h  m_field_make.h  m_lib.h  m_msg_enum.h  m_name_table.h  m_snowman.h  m_soncho.h  m_submenu.h  m_submenu_ovl.h  main.h  sys_math.h  types.h
include/Famicom/: famicom.h  ks_nes_common.h  ks_nes_core.h
include/GBA/: GBAPriv.h
pc/: foresta.cmake  static.cmake
src/: audio.c  c_keyframe.c  executor.c  famicom_emu.c  first_game.c  game.c  gamealloc.c  graph.c  main.c
tools/: project.py
(+2729 files in other folders)
